fix: overflow of ToC on the left

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -33,3 +33,9 @@
   -webkit-mask-image: var(--md-admonition-icon--filetemplate);
   mask-image: var(--md-admonition-icon--filetemplate);
 }
+
+.md-sidebar__scrollwrap,
+.md-sidebar--secondary {
+  height: 100vh;
+  overflow-y: auto;
+}
